# Applied_Cryptography_Workshop

./: .gitignore  GMAC.py  Helpers.py  PRFs.py  Prover_Verifier.py  app.py  helpers.py  ldpc_example.py  primes.py  processed_with_gmac.txt  requirements.txt  z_prime_field.py
Application/: app.py  requirements.txt
Common/: helpers.py
Common/Constants/: BLS12_381Constants.py  SolanaConstants.py
Common/Providers/: SolanaApiGatewayProvider.py  solanaApiGatewayProvider.py
Common/ReedSolomon/: reedSolomon.py
PoR_Application/: README.md
PrivateKeyVersionScheme/: GMAC.py  PRFs.py  Prover_Verifier.py  helpers.py  proverVerifier.py
PrivateKeyVersionScheme/EncodedFiles/: PoR.pdf.encoded.txt
PublicKeyVersionScheme/: Prover_Verifier.py  helpers.py  proverVerifier.py
PublicKeyVersionScheme/EncodedFiles/: PoR.pdf.encoded.txt  specific_8_byte_file.txt.encoded.txt
PublicKeyVersionSchemeSimple/: Prover_Verifier_simple.py  helpers.py  proverVerifier.py
PublicKeyVersionSchemeSimple/EncodedFiles/: PoR.pdf.encoded.txt
Rust Project/: Cargo.toml  request.curl
Rust Project/src/: main.rs
StorageClient/: request.py
StorageServer/: README.md  StorageServer.py  requirements.txt
StorageServer/StorageServer/: __init__.py  api.py  config.py  helpers.py  storage.py
test/: 18064f6d-e0ba-42be-8f67-ea6ec2e5aecd.JPG.encoded
