[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

[dependencies]
bls12_381 = "0.8.0"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
num-bigint = { version = "0.4", features = ["serde"] }
ark-bls12-381 = "0.5.0"
ark-ff = "=0.5.0"
