[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

[dependencies]
bls12_381 = { version = "0.8.0", features = ["experimental"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
hex = "0.4.3"
sha2 = "0.9.7"  # Ensure this is compatible with `bls12_381`
